移除布隆过滤器 太占空间